Fix reflow for top section on tablet+

--- a/styles/pages/features.scss
+++ b/styles/pages/features.scss
@@ -41,7 +41,7 @@
   }
 
   .questions {
-    @media #{tablet} {
+    @media #{$tablet} {
       @include display(flex);  
     }
     font-size: 2em;
